--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Photo rig for Geology dept.",
   "main": "index.js",
   "scripts": {
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/CC-IS/2021-026_Photo_Rig/issues"
   },
-  "homepage": "https://github.com/CC-IS/2021-026_Photo_Rig#readme"
+  "homepage": "https://github.com/CC-IS/2021-026_Photo_Rig#readme",
+  "devDependencies": {
+    "electron": "^13.2.2"
+  }
 }
