added the library for arduino communication

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/CC-IS/2021-026_Photo_Rig#readme",
   "devDependencies": {
     "electron": "^13.3.0"
+  },
+  "dependencies": {
+    "serialport": "^9.2.4"
   }
 }
